force-app/main/default/objects/DocGen_Settings__c/DocGen_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global settings for the Document Generation platform.</description>
    <label>Portwood Settings</label>
</CustomObject>