force-app/main/default/objects/DocGen_Settings__c/fields/AI_Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Template__c</fullName>
    <description
    >API name of the Prompt Builder Flex template the AI provider invokes. Leave blank to use the default name DocGen_HTML_Body. A prompt template cannot be packaged — its version identifier is generated by the platform — so you create it yourself in Setup &gt; Einstein &gt; Prompt Builder. DocGen does not read this field directly; it is here so your provider class can be configured without editing Apex. See docs/AGENTFORCE_SETUP.md.</description>
    <label>AI Prompt Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>