force-app/main/default/objects/DocGen_Settings__c/fields/AI_Provider_Class__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider_Class__c</fullName>
    <description
    >Apex class in YOUR org implementing the DocGenAiProvider interface, used by the Designer's "Generate with Agentforce" button. Leave blank to use the default name DocGenEinsteinProvider. The class is resolved in your namespace first, then in portwoodglobal. If it is absent or does not implement the interface, Portwood hides the button and the Copy AI Prompt workflow is unaffected. See UserGuide section 5.7.11.</description>
    <label>AI Provider Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>