force-app/main/default/objects/DocGen_Settings__c/fields/Enable_AI_Authoring__c.field-meta.xml
<CustomField>
    <fullName>Enable_AI_Authoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Turn on "Generate with Agentforce" in the template Designer. Off by default: the Einstein provider ships inside the package, so DocGen cannot tell whether AI is usable simply by checking whether the class is present. Switch this on only after Einstein/Prompt Builder is enabled and the DocGen_HTML_Body prompt template exists and is Activated — otherwise authors get a button that fails when they press it. See docs/AGENTFORCE_SETUP.md.</description>
    <label>Enable AI Authoring</label>
    <type>Checkbox</type>
</CustomField>