force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Signature_Expiration_Days__c</fullName>
    <defaultValue>2</defaultValue>
    <description
    >Org-wide default: signing links expire this many days after send. Individual sends and the Flow action can override per request. Requests created before this setting existed keep the legacy 48-hour lifetime.</description>
    <label>Signature Link Expiration (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>