force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Reminder_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Signature_Reminder_Schedule__c</fullName>
    <description
    >Comma-separated hour offsets after send at which pending signers are reminded, e.g. "24,72,168" = after 1, 3 and 7 days. Blank falls back to the single-reminder behavior driven by Signature Reminder After (Hours).</description>
    <label>Signature Reminder Schedule (Hours)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>