force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Require_Email_Verification__c.field-meta.xml
<CustomField>
    <fullName>Signature_Require_Email_Verification__c</fullName>
    <defaultValue>true</defaultValue>
    <description
    >Org default (#verification): when true, signers must verify a one-time email PIN before signing. Templates can override (Signer_Verification__c) and individual sends can override again. Default true preserves the historical mandatory-verification behavior on upgrade.</description>
    <label>Require Email Verification (Signatures)</label>
    <type>Checkbox</type>
</CustomField>