force-app/main/default/objects/DocGen_Settings__c/fields/Signature_Skip_Email_Verification__c.field-meta.xml
<CustomField>
    <fullName>Signature_Skip_Email_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Org default (#verification). When FALSE (the default — and the value on existing/upgrading orgs that never set it), signers must verify a one-time email PIN before signing. Set TRUE to skip verification org-wide. Inverted "skip" semantics deliberately: a Checkbox can't represent "unset", so the safe default (verification required) must be the field's natural false state to survive upgrades. Templates and individual sends can still override.</description>
    <label>Skip Email Verification (Signatures)</label>
    <type>Checkbox</type>
</CustomField>